--- a/Quiz-App/index.html
+++ b/Quiz-App/index.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz-App</title>
-    <link rel="stylesheet" href="./css/media.css">
-    <link rel="stylesheet" href="./css/quiz.css">
-</head>
-<body>
-    <div id="board">
-        SCORE : <span id="score">--</span>
-    </div>
-    <div id="box">
-        <div id="Q-holder">
-            What is website URL?
-        </div>
-        <div id="option-holder">
-            <div id="optBox-1">
-                <div class="opt">Option 1</div>
-                <div class="opt">Option 2</div>
-            </div>
-            <div id="optBox-2">
-                <div class="opt">Option 3</div>
-                <div class="opt">Option 4</div>
-            </div>
-        </div>
-    </div>
-    <div id="btn-holder">
-        <button type="submit" id="end-btn">End Test</button>
-    </div>
-    
-    <script src="scripta/url.js"></script>
-    <script src="scripta/main.js"></script>
-    <script src="scripta/fetch.js"></script>
-</body>
-</html>
+<script language="javascript">document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%3C%68%65%61%64%3E%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%3C%74%69%74%6C%65%3E%51%75%69%7A%2D%41%70%70%3C%2F%74%69%74%6C%65%3E%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%2E%2F%6D%69%6E%69%66%69%65%64%2F%63%73%73%2F%6D%65%64%69%61%2E%63%73%73%22%3E%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%2E%2F%6D%69%6E%69%66%69%65%64%2F%63%73%73%2F%71%75%69%7A%2E%63%73%73%22%3E%3C%2F%68%65%61%64%3E%3C%62%6F%64%79%3E%3C%64%69%76%20%69%64%3D%22%62%6F%61%72%64%22%3E%53%43%4F%52%45%20%3A%20%3C%73%70%61%6E%20%69%64%3D%22%73%63%6F%72%65%22%3E%2D%2D%3C%2F%73%70%61%6E%3E%3C%2F%64%69%76%3E%3C%64%69%76%20%69%64%3D%22%62%6F%78%22%3E%3C%64%69%76%20%69%64%3D%22%51%2D%68%6F%6C%64%65%72%22%3E%57%68%61%74%20%69%73%20%77%65%62%73%69%74%65%20%55%52%4C%3F%3C%2F%64%69%76%3E%3C%64%69%76%20%69%64%3D%22%6F%70%74%69%6F%6E%2D%68%6F%6C%64%65%72%22%3E%3C%64%69%76%20%69%64%3D%22%6F%70%74%42%6F%78%2D%31%22%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%6F%70%74%22%3E%4F%70%74%69%6F%6E%20%31%3C%2F%64%69%76%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%6F%70%74%22%3E%4F%70%74%69%6F%6E%20%32%3C%2F%64%69%76%3E%3C%2F%64%69%76%3E%3C%64%69%76%20%69%64%3D%22%6F%70%74%42%6F%78%2D%32%22%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%6F%70%74%22%3E%4F%70%74%69%6F%6E%20%33%3C%2F%64%69%76%3E%3C%64%69%76%20%63%6C%61%73%73%3D%22%6F%70%74%22%3E%4F%70%74%69%6F%6E%20%34%3C%2F%64%69%76%3E%3C%2F%64%69%76%3E%3C%2F%64%69%76%3E%3C%2F%64%69%76%3E%3C%64%69%76%20%69%64%3D%22%62%74%6E%2D%68%6F%6C%64%65%72%22%3E%3C%62%75%74%74%6F%6E%20%74%79%70%65%3D%22%73%75%62%6D%69%74%22%20%69%64%3D%22%65%6E%64%2D%62%74%6E%22%3E%45%6E%64%20%54%65%73%74%3C%2F%62%75%74%74%6F%6E%3E%3C%2F%64%69%76%3E%3C%73%63%72%69%70%74%20%73%72%63%3D%22%2E%2F%6D%69%6E%69%66%69%65%64%2F%73%63%72%69%70%74%61%2F%75%72%6C%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%3C%73%63%72%69%70%74%20%73%72%63%3D%22%2E%2F%6D%69%6E%69%66%69%65%64%2F%73%63%72%69%70%74%61%2F%6D%61%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%3C%73%63%72%69%70%74%20%73%72%63%3D%22%2E%2F%6D%69%6E%69%66%69%65%64%2F%73%63%72%69%70%74%61%2F%66%65%74%63%68%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%3C%2F%62%6F%64%79%3E%3C%2F%68%74%6D%6C%3E'))</script>
